--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 }
 .navigation_bar{
 	background-image: linear-gradient(to right,#a2cae8,#7dbae8,#4781ad);
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index: 5;
 }
 .navmenu{
 	color: white;
@@ -18,7 +23,72 @@
 }
 .myname{
 	font-size: 30px;
+/*	as*/
 	font-family: Arial Black;
-	color: royalblue;
+	color: darkslateblue;
 	text-shadow: 0px 0px 3px white;
+}
+.sect
+{
+/*	border: 2px solid black;*/
+	height: 500px;
+	/*display: flex;
+	justify-content: center;
+	align-items: center;*/
+}
+.sect div
+{
+	font-size: 50px;
+}
+html{
+	scroll-behavior: smooth;
+}
+.home{
+	margin-top: 100px;
+	height: 400px;
+}
+.homename{
+	font-size: 50px;
+	color: cornflowerblue;
+}
+#designation
+{
+	font-size: 40px;
+	color: black;
+	font-weight: bolder;
+}
+.home div
+{
+	font-weight: bolder;
+}
+.about{
+	background-color: #dae0da;
+	height: 400px;
+}
+.aboutdata
+{
+	margin-top: 25px;
+}
+.cobj
+{
+	font-size: 20px;
+	text-align: justify;
+	text-indent: 10%;
+	color: black;
+}
+.section_head
+{
+	font-size: 40px;
+	color: black;
+	font-variant: small-caps;
+	font-family: Arial Black;
+}
+.myimg{
+	transition-duration: 1.5s;
+}
+.myimg:hover
+{
+	transform: scale(1.4);
+	border-radius: 50px;
+	box-shadow: 0px 0px 20px royalblue;
 }
