update style sheet

--- a/style.css
+++ b/style.css
@@ -90,5 +90,5 @@ html{
 {
 	transform: scale(1.4);
 	border-radius: 50px;
-	box-shadow: 0px 0px 20px royalblue;
+	box-shadow: 0px 0px 20px black;
 }
