--- a/style.css
+++ b/style.css
@@ -137,3 +137,6 @@ html{
 	line-height: 50px;
 	font-size: 30px;
 }
+.text-shadow-pop-top {
+	-webkit-animation: text-shadow-pop-top 0.6s both;
+	        animation: text-shadow-pop-top 0.6s both;
